--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "buffer": "^6.0.3",
     "expo": "~51.0.28",
     "expo-av": "^14.0.7",
+    "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
